fix: add support for exclusive LOCK with Microsoft Word for Mac user-agent